--- a/content/08-marlowe/08-marlowe-run.mdx
+++ b/content/08-marlowe/08-marlowe-run.mdx
@@ -17,7 +17,7 @@ To access and view the dashboard, follow these steps:
 
 ![demo-launch](demo-launch.png)
 
- For this demo version of Marlowe Run, test wallets with 10k ADA in them are generated so that you can use the service. You can use any wallet that exists on the server as  long as you know the public key. This will become the integration point with a real wallet in the full version of Marlowe Run, where only the wallet owner can authorize  payments.
+For this demo version of Marlowe Run, test wallets with 10k ADA in them are generated so that you can use the service. You can use any wallet that exists on the server as  long as you know the public key. This will become the integration point with a real wallet in the full version of Marlowe Run, where only the wallet owner can authorize  payments.
 
 4. Click **Generate demo wallet** to use a demo wallet.
 5. Enter a nickname for your demo wallet. You can only use letters and numbers for the nickname.	
@@ -42,29 +42,27 @@ An overview card is displayed, as follows:
 
 ![contract-overview](contract-overview.png)
 
-9. Click **Setup**, or **Back** to return to the contract template selection card.
+9. Click **Setup** to proceed and run the contract.
 10. Enter the following details for the contract:
-    - title
-    - role information: buyer, mediator, seller
-    - terms: price, payment deadline, complaint deadline, complaint response deadline, mediaton deadline
+    - Title
+    - Roles: Buyer, Mediator, Seller
+    - Terms: Price, Payment deadline, Complaint deadline, Complaint response deadline, Mediaton deadline
 11. Then click **Review**.
 12. Review the information on the confirmation card.
-13. Then click Pay and start. The contract is now running.
+13. Then click **Pay and start** to run the contract.
 
 ![pay-start](pay-start.png)
 
-The running contract dialog is displayed on the contracts dashboard. This shows a counter with the time allocated within which the seller must make a deposit.
+The running contract dialog is displayed on the contracts dashboard. This shows a counter with the time allocated within which the participants must make a deposit. Depending on the contract you may need to wait for a participant to make a deposit before you can proceed. 
 
-14. Now the buyer must make their deposit. 
-15. Once they make their deposit, you have two choices:
-    - Click Everything is alright to confirm you are happy to proceed.
-    - Click Report problem if there was an issue with the contract.
+14. Click **Deposit** to make the required deposit. 
+15. Confirm your payment by clicking **Deposit** again.
+16. Click **Everything is alright** to confirm you are happy to proceed.
+17. Then click **Choose** to proceed. A confirmation message is displayed to confirm that the transaction was submitted successfully. 
 
 Note that if you do not act within the allocated time period, the contract will time out and you will have to close the contract and start again. If this happens, the balance of the account will be redeemed to the owner of the role.
 
-You can click **Close contract** at any time to close the running contract.
-
-
+You can click **Close contract** at any time to close a running contract.
 
 ## Adding Contacts
 You can maintain a list of your active contacts that you regularly communicate with.
