--- a/content/08-marlowe/08-marlowe-run.mdx
+++ b/content/08-marlowe/08-marlowe-run.mdx
@@ -24,7 +24,7 @@ For this demo version of Marlowe Run, test wallets with 10k ADA in them are gene
 
 ![demo-wallet](demo-wallet.png)
 
-6. Click **Use**
+6. Click **Use**.
 
 After you have selected your wallet, the following screen is displayed:
 
@@ -55,9 +55,14 @@ An overview card is displayed, as follows:
 
 The running contract dialog is displayed on the contracts dashboard. This shows a counter with the time allocated within which the participants must make a deposit. Depending on the contract you may need to wait for a participant to make a deposit before you can proceed. 
 
+![steps-tab](steps-tab.png)
+
 14. Click **Deposit** to make the required deposit. 
+
+![steps-tab](steps-tab.png)
+
 15. Confirm your payment by clicking **Deposit** again.
-16. Click **Everything is alright** to confirm you are happy to proceed.
+16. Click **Everything is alright** to confirm you are happy to proceed. Otherwise, you can click **Report a problem** if there is an issue.
 17. Then click **Choose** to proceed. A confirmation message is displayed to confirm that the transaction was submitted successfully. 
 
 Note that if you do not act within the allocated time period, the contract will time out and you will have to close the contract and start again. If this happens, the balance of the account will be redeemed to the owner of the role.
