--- a/content/08-marlowe/08-marlowe-run.mdx
+++ b/content/08-marlowe/08-marlowe-run.mdx
@@ -72,6 +72,8 @@ You can click **Close contract** at any time to close a running contract.
 ## Adding Contacts
 You can maintain a list of your active contacts that you regularly communicate with.
 
+![contacts-tab](contacts-tab.png)
+
 To add a new contact, follow these steps:
 1. Click the **Contacts** icon on the main menu.
 2. Click **New contact** to record the details of a new contact.
