--- a/content/08-marlowe/08-marlowe-run.mdx
+++ b/content/08-marlowe/08-marlowe-run.mdx
@@ -7,7 +7,7 @@ Get your smart contracts up and running in minutes. Marlowe Run provides an intu
 
 Marlowe Run is a fast and easy way to use and run contracts on Cardano. You will find a selection of financial contract templates so you can pick the right smart contract for you. Once you choose a template, you simply add in roles and terms, and then run your contract. You will be using the prototype version of Marlowe Run.
 
-**Note**: This prototype version of Marlowe Run provides a demo version that uses test contracts and test funds. The full version of Marlowe Run will be available soon.
+**Note**: This prototype version of Marlowe Run provides a demo version that uses test contracts and simulated funds. The full version of Marlowe Run will be available soon.
 
 ## Accessing the Marlowe Run Demo
 To access and view the dashboard, follow these steps:
@@ -15,9 +15,9 @@ To access and view the dashboard, follow these steps:
 2. Click **Try demo**.
 3. The Marlowe Run demo is launched:
 
-![demo-launch](demo-launch.png)
+![demo](demo-launch.png)
 
-For this demo version of Marlowe Run, test wallets with 10k ADA in them are generated so that you can use the service. You can use any wallet that exists on the server as  long as you know the public key. This will become the integration point with a real wallet in the full version of Marlowe Run, where only the wallet owner can authorize  payments.
+For this demo version of Marlowe Run, test wallets are generated with 10k ADA in them, so that you can use the service. You can use any wallet that exists on the server as  long as you know the public key. This will become the integration point with a real wallet in the full version of Marlowe Run, where only the wallet owner can authorize  payments.
 
 4. Click **Generate demo wallet** to use a demo wallet.
 5. Enter a nickname for your demo wallet. You can only use letters and numbers for the nickname.	
