--- a/content/08-marlowe/08-marlowe-run.mdx
+++ b/content/08-marlowe/08-marlowe-run.mdx
@@ -15,32 +15,32 @@ To access and view the dashboard, follow these steps:
 2. Click **Try demo**.
 3. The Marlowe Run demo is launched:
 
-![demo](demo-launch.png)
+![demo](demo-launch.PNG)
 
 For this demo version of Marlowe Run, test wallets are generated with 10k ADA in them, so that you can use the service. You can use any wallet that exists on the server as  long as you know the public key. This will become the integration point with a real wallet in the full version of Marlowe Run, where only the wallet owner can authorize  payments.
 
 4. Click **Generate demo wallet** to use a demo wallet.
 5. Enter a nickname for your demo wallet. You can only use letters and numbers for the nickname.	
 
-![demo-wallet](demo-wallet.png)
+![demo-wallet](demo-wallet.PNG)
 
 6. Click **Use**.
 
 After you have selected your wallet, the following screen is displayed:
 
-![contracts-dashboard](contracts-dashboard.png)
+![contracts-dashboard](contracts-dashboard.PNG)
 
 7. Click **Choose a template** to use a template to create your contract.
 
 The Contract templates selection card is displayed with three options (Purchase, Loan, CFD), as follows:
 
-![choose-template](choose-template.png)
+![choose-template](choose-template.PNG)
 
 8. Click the contract template you want to use, for example, Purchase.
 
 An overview card is displayed, as follows:
 
-![contract-overview](contract-overview.png)
+![contract-overview](contract-overview.PNG)
 
 9. Click **Setup** to proceed and run the contract.
 10. Enter the following details for the contract:
@@ -51,15 +51,15 @@ An overview card is displayed, as follows:
 12. Review the information on the confirmation card.
 13. Then click **Pay and start** to run the contract.
 
-![pay-start](pay-start.png)
+![pay-start](pay-start.PNG)
 
 The running contract dialog is displayed on the contracts dashboard. This shows a counter with the time allocated within which the participants must make a deposit. Depending on the contract you may need to wait for a participant to make a deposit before you can proceed. 
 
-![steps-tab](steps-tab.png)
+![steps-tab](steps-tab.PNG)
 
 14. Click **Deposit** to make the required deposit. 
 
-![steps-tab](steps-tab.png)
+![steps-tab](steps-tab.PNG)
 
 15. Confirm your payment by clicking **Deposit** again.
 16. Click **Everything is alright** to confirm you are happy to proceed. Otherwise, you can click **Report a problem** if there is an issue.
@@ -72,7 +72,7 @@ You can click **Close contract** at any time to close a running contract.
 ## Adding Contacts
 You can maintain a list of your active contacts that you regularly communicate with.
 
-![contacts-tab](contacts-tab.png)
+![contacts-tab](contacts-tab.PNG)
 
 To add a new contact, follow these steps:
 1. Click the **Contacts** icon on the main menu.
