adding caution note

--- a/content/10-plutus/06-Plutus-transactions.mdx
+++ b/content/10-plutus/06-Plutus-transactions.mdx
@@ -180,6 +180,7 @@ At this point, the node will start syncing with the network, which will come use
 
 We need a Haskell program to compile our desired Plutus script. In this example we will use the [plutus-alwayssucceeds](https://github.com/input-output-hk/Alonzo-testnet/tree/main/resources/plutus-sources/plutus-alwayssucceeds) Plutus script.
 
+**Note** The “Plutus always succeeds” script is used in this tutorial *only as an example*, as it uses a very simple protection mechanism that does not perform any validation of funds. Therefore, we recommend that you do not deploy this contract on the mainnet. If you still want to deploy it on mainnet, you should use a more secure datum. 
 
 
 
