--- a/content/04-core-concepts/02-cardano-node.mdx
+++ b/content/04-core-concepts/02-cardano-node.mdx
@@ -4,11 +4,11 @@ metaTitle: Cardano node
 ---
 
 The Cardano node is the core component that underpins the network and enables
-you to participate in the Cardano decentralized blockchain. Ultimately, a
+you to participate in the [Cardano](https://cardano.org/) decentralized blockchain. Ultimately, a
 blockchain network is just a collection of interconnected nodes, all working
 together to validate transactions and blocks by means of consensus. The
 definition of consensus for any given network varies, but for the Cardano
-network it is defined by the Ouroboros protocol. By running a Cardano node, you
+network it is defined by the [Ouroboros protocol](https://docs.cardano.org/core-concepts/ouroboros-overview). By running a Cardano node, you
 are participating in and contributing to the network.
 
 This [cardano-node](https://github.com/input-output-hk/cardano-node) is the top
