--- a/content/08-marlowe/08-marlowe-run.mdx
+++ b/content/08-marlowe/08-marlowe-run.mdx
@@ -11,7 +11,7 @@ Marlowe Run is a fast and easy way to use and run contracts on Cardano. You will
 
 ## Accessing the Marlowe Run Demo
 To access and view the dashboard, follow these steps:
-1. Visit the Marlowe website and click **Marlowe Run** on the main menu.
+1. Visit the [Marlowe website](https://marlowe-finance.io/) and click **Marlowe Run** on the main menu.
 2. Click **Try demo**.
 3. The Marlowe Run demo is launched:
 
