--- a/content/12-tools/02-release-notes.mdx
+++ b/content/12-tools/02-release-notes.mdx
@@ -13,16 +13,16 @@ Cardano node configuration details (for mainnet and testnet) are available on th
 
 Name | Version | Release Date
 -|-|-
-[Cardano Node](https://github.com/input-output-hk/cardano-node) | [1.29.0](https://github.com/input-output-hk/cardano-node/releases/tag/1.29.0) | 27 August 2021
-[Cardano RTView](https://github.com/input-output-hk/cardano-rt-view) | [0.3.0](https://github.com/input-output-hk/cardano-rt-view/releases/tag/0.3.0) | 15 Janurary 2021
-[Cardano DB Sync](https://github.com/input-output-hk/cardano-db-sync/releases) | [11.0.0](https://github.com/input-output-hk/cardano-db-sync/releases/tag/11.0.0) | 28 August 2021
-[Smash](https://github.com/input-output-hk/smash) | [1.6.0](https://github.com/input-output-hk/smash/releases/tag/1.6.0) | 30 August 2021
-[Cardano Rosetta](https://github.com/input-output-hk/cardano-rosetta) | [1.4.0](https://github.com/input-output-hk/cardano-rosetta/releases/tag/1.4.0) | 30 August 2021
-[Cardano GraphQL](https://github.com/input-output-hk/cardano-graphql) | [5.1.0](https://github.com/input-output-hk/cardano-graphql/releases/tag/5.1.0) | 28 August 2021
-[Cardano Explorer](https://github.com/input-output-hk/cardano-explorer-app) | [1.6.0](https://github.com/input-output-hk/cardano-explorer-app/releases/tag/1.5.0) | 27 July 2021
-[Cardano Transactions](https://github.com/input-output-hk/cardano-transactions) | [1.0.0](https://github.com/input-output-hk/cardano-transactions/releases/tag/1.0.0) | 21 April 2020
-[Cardano Addresses](https://github.com/input-output-hk/cardano-addresses) | [3.6.0](https://github.com/input-output-hk/cardano-addresses/releases/tag/3.6.0) | 14 September 2021
-[Cardano Coin Selection](https://github.com/input-output-hk/cardano-coin-selection) | [1.0.1](https://github.com/input-output-hk/cardano-coin-selection/releases/tag/v1.0.1) | 13 May 2020
-[Bech32](https://github.com/input-output-hk/bech32) | [1.1.1](https://github.com/input-output-hk/bech32/releases/tag/v1.1.1) | 11 June 2021
-[Cardano Wallet](https://github.com/input-output-hk/cardano-wallet) | [2021-09-09](https://github.com/input-output-hk/cardano-wallet/releases/tag/v2021-09-09) | 09 September 2021
+[Cardano Node](https://github.com/input-output-hk/cardano-node) | [1.30.1](https://github.com/input-output-hk/cardano-node/releases/tag/1.30.1) | 28 September, 2021
+[Cardano RTView](https://github.com/input-output-hk/cardano-rt-view) | [0.3.0](https://github.com/input-output-hk/cardano-rt-view/releases/tag/0.3.0) | 15 Janurary, 2021
+[Cardano DB Sync](https://github.com/input-output-hk/cardano-db-sync/releases) | [11.0.3](https://github.com/input-output-hk/cardano-db-sync/releases/tag/11.0.3) | 28 September, 2021
+[Smash](https://github.com/input-output-hk/smash) | [1.6.0](https://github.com/input-output-hk/smash/releases/tag/1.6.0) | 30 August, 2021
+[Cardano Rosetta](https://github.com/input-output-hk/cardano-rosetta) | [1.4.0](https://github.com/input-output-hk/cardano-rosetta/releases/tag/1.4.0) | 30 August, 2021
+[Cardano GraphQL](https://github.com/input-output-hk/cardano-graphql) | [5.1.0](https://github.com/input-output-hk/cardano-graphql/releases/tag/5.1.0) | 28 August, 2021
+[Cardano Explorer](https://github.com/input-output-hk/cardano-explorer-app) | [1.6.0](https://github.com/input-output-hk/cardano-explorer-app/releases/tag/1.5.0) | 27 July, 2021
+[Cardano Transactions](https://github.com/input-output-hk/cardano-transactions) | [1.0.0](https://github.com/input-output-hk/cardano-transactions/releases/tag/1.0.0) | 21 April, 2020
+[Cardano Addresses](https://github.com/input-output-hk/cardano-addresses) | [3.6.0](https://github.com/input-output-hk/cardano-addresses/releases/tag/3.6.0) | 14 September, 2021
+[Cardano Coin Selection](https://github.com/input-output-hk/cardano-coin-selection) | [1.0.1](https://github.com/input-output-hk/cardano-coin-selection/releases/tag/v1.0.1) | 13 May, 2020
+[Bech32](https://github.com/input-output-hk/bech32) | [1.1.1](https://github.com/input-output-hk/bech32/releases/tag/v1.1.1) | 11 June, 2021
+[Cardano Wallet](https://github.com/input-output-hk/cardano-wallet) | [2021-09-09](https://github.com/input-output-hk/cardano-wallet/releases/tag/v2021-09-09) | 09 September, 2021
 
