--- a/content/10-plutus/01-learn-about-plutus.mdx
+++ b/content/10-plutus/01-learn-about-plutus.mdx
@@ -9,6 +9,8 @@ The Alonzo upgrade brings exciting and highly anticipated capabilities to Cardan
 
 If you want to get started, visit the [Plutus Playground](https://playground.plutus.iohkdev.io/) to learn how to write Plutus programs and use the [tutorials](https://plutus.readthedocs.io/en/latest/plutus/tutorials/index.html) and to assist you. You should also read the explainers and tutorials provided here and refer to the [Plutus explanations](https://plutus.readthedocs.io/en/latest/plutus/explanations/index.html) to learn more about the Plutus language itself.
 
+We are here to help! If you need support while using Plutus, please log an issue in the [Plutus repository](https://github.com/input-output-hk/plutus) and include as much detail as you can.
+
 ## Plutus smart contracts
 Plutus smart contracts consist of parts that run on the blockchain (on-chain code) and parts that run on a user’s machine (off-chain or client code). Off-chain code can be written using the Plutus Application Framework (PAF), and this code is then compiled by the GHC (Glasgow Haskell Compiler), whereas on-chain code is compiled by the Plutus compiler into Plutus Core. 
 
