Merkle tree addition

--- a/content/13-glossary.mdx
+++ b/content/13-glossary.mdx
@@ -178,7 +178,10 @@ the mainnet hold value as opposed to assets on a testnet that do not hold value.
   a domain-specific programming language (DSL) that is built on top of Plutus functionality. [Marlowe](https://docs.cardano.org/marlowe/learn-about-marlowe) can be used for financial purposes. There is a friendly [Marlowe playground](https://docs.cardano.org/marlowe/marlowe-get-started) - an environment where non-technical users can easily execute smart contracts prewriting specific conditions.
   
 ## Marlowe Playground
-  the browser-based sandbox environment for end-to-end financial smart contract development. Its purpose is to encourage all types of developers, even if you don’t have prior Haskell or Javascript experience, to build financial products on Cardano. A [set of tutorials](https://play.marlowe-finance.io/doc/marlowe/tutorials/index.html) is available that outlines example contracts and overview information on Marlowe and how contracts should be modelled. 
+  the browser-based sandbox environment for end-to-end financial smart contract development. Its purpose is to encourage all types of developers, even if you don’t have prior Haskell or Javascript experience, to build financial products on Cardano. A [set of tutorials](https://play.marlowe-finance.io/doc/marlowe/tutorials/index.html) is available that outlines example contracts and overview information on Marlowe and how contracts should be modelled.
+
+## Merkle tree
+  a data structure used in blockchain applications to encode data in a secure and efficient way. The Merkle tree allows a block of transactions to be generated in a single hash, which is used to verify its validity to the original set of transactions. Using hashes is time efficient and does not require the validation of every transaction from the chain history. 
   
 ## metadata
 
