--- a/content/08-marlowe/01-learn-about-marlowe.mdx
+++ b/content/08-marlowe/01-learn-about-marlowe.mdx
@@ -7,6 +7,8 @@ Marlowe offers financial contracts for blockchain that everyone can code. It is 
 
 As a special-purpose language, it is easier to read, write, and understand Marlowe contracts. It is also safer: some errors are impossible to write, and we can completely analyse contract behaviour without having to run a contract.
 
+We are here to help! If you need support while using Marlowe, please log an issue in the [Marlowe repository](https://github.com/input-output-hk/marlowe) and include as much detail as you can.
+
 ### Who can use Marlowe? 
 
 Marlowe has been designed to be used by someone who is an expert in the field of financial contracts or business, but does not have programming skills and experience, because it allows you to build contracts visually and in more traditional code. Financial institutions can use it to develop and deploy custom instruments for their customers and clients, for example.
