--- a/content/10-plutus/01-learn-about-plutus.mdx
+++ b/content/10-plutus/01-learn-about-plutus.mdx
@@ -7,7 +7,7 @@ Plutus is the native smart contract language for Cardano. It is a Turing-complet
 
 The Alonzo upgrade brings exciting and highly anticipated capabilities to Cardano through the integration of Plutus scripts onto the blockchain. These scripts now enable the implementation of smart contracts on Cardano, enabling a host of new use cases for decentralized applications (DApps) for the very first time.
 
-If you want to get started, visit the [Plutus Playground](https://playground.plutus.iohkdev.io/) to learn how to write Plutus programs and use the [tutorials](https://plutus.readthedocs.io/en/latest/plutus/tutorials/index.html) and to assist you. You should also read the explainers and tutorials provided here and refer to the [Plutus explanations](https://plutus.readthedocs.io/en/latest/plutus/explanations/index.html) to learn more about the Plutus language itself.
+If you want to get started, visit the [Plutus Playground](https://playground.plutus.iohkdev.io/) to learn how to write Plutus programs and use the [tutorials](https://plutus-apps.readthedocs.io/en/latest/) and to assist you. You should also read the explainers and tutorials provided here and refer to the [Plutus explanations](https://plutus-apps.readthedocs.io/en/latest/plutus/explanations/index.html) to learn more about the Plutus language itself.
 
 We are here to help! If you need support while using Plutus, please log an issue in the [Plutus repository](https://github.com/input-output-hk/plutus) and include as much detail as you can.
 
