--- a/content/10-plutus/13-Plutus-FAQs.mdx
+++ b/content/10-plutus/13-Plutus-FAQs.mdx
@@ -19,8 +19,8 @@ metaTitle: Plutus FAQs
 **A:**
 Here are some useful links:  
 - [Learn about Plutus section](https://docs.cardano.org/plutus/learn-about-plutus)
-- [Tutorials](https://plutus.readthedocs.io/en/latest/plutus/tutorials/index.html)
-- [Explainers](https://plutus.readthedocs.io/en/latest/plutus/explanations/index.html)
+- [Tutorials](https://plutus-apps.readthedocs.io/en/latest/plutus/tutorials/index.html)
+- [Explainers](https://plutus-apps.readthedocs.io/en/latest/plutus/explanations/index.html)
 	  
 **Q: What are the cost model parameters for Plutus?**  
 **A:**
