--- a/content/10-plutus/13-Plutus-FAQs.mdx
+++ b/content/10-plutus/13-Plutus-FAQs.mdx
@@ -24,7 +24,7 @@ Here are some useful links:
 	  
 **Q: What are the cost model parameters for Plutus?**  
 **A:**
-There are various [cost model parameters](https://plutus.readthedocs.io/en/latest/reference/cost-model-parameters.html) for Plutus scripts, all of which can be adjusted individually.
+There are various [cost model parameters](https://plutus-apps.readthedocs.io/en/latest/reference/cost-model-parameters.html) for Plutus scripts, all of which can be adjusted individually.
 
 **Q: What is the difference between wallets and UTXOs?**  
 **A:**
