--- a/content/10-plutus/11-transaction-costs-determinism.mdx
+++ b/content/10-plutus/11-transaction-costs-determinism.mdx
@@ -9,7 +9,7 @@ The Cardano ledger's design is focused on high assurance, security, and proven f
 
 The ability to guarantee the cost of transaction execution and how the transaction behaves on the ledger *before* it is submitted, becomes even more prominent with the introduction of smart contract support. This feature is different from other blockchains, including Ethereum, where other network activity can influence the gas cost. This ability is also guaranteed by the deterministic nature of Cardano and [Plutus scripts](https://docs.cardano.org/plutus/Plutus-validator-scripts). 
 
-The calculation of the minimum ada value to process a transaction in Alonzo is different from previous Mary calculations. There is no longer a ``minUTxOValue`` protocol parameter in Alonzo as it was deprecated at the end of the Mary era. However, the requirement that each UTXO must contain an amount of ada that depends on the size of the entry is still enforced in Alonzo. The size-dependent minimum ada amount in a UTXO is referred to as the min-ada-value, and is now calculated using the Alonzo parameter ``coinsPerUTxOWord``. [Read more about the specifics of Alonzo min-ada-value calculation here](https://github.com/input-output-hk/cardano-ledger-specs/blob/master/doc/explanations/min-utxo-alonzo.rst).
+The calculation of the minimum ada value to process a transaction in Alonzo is different from previous Mary calculations. There is no longer a ``minUTxOValue`` protocol parameter in Alonzo as it was deprecated at the end of the Mary era. However, the requirement that each UTXO must contain an amount of ada that depends on the size of the entry is still enforced in Alonzo. The size-dependent minimum ada amount in a UTXO is referred to as the min-ada-value, and is now calculated using the Alonzo parameter ``coinsPerUTxOWord``. To learn more, read the specifics of the [Alonzo min-ada-value calculation](https://github.com/input-output-hk/cardano-ledger-specs/blob/master/doc/explanations/min-utxo-alonzo.rst).
 
 ## Determinism
 
