--- a/content/10-plutus/11-transaction-costs-determinism.mdx
+++ b/content/10-plutus/11-transaction-costs-determinism.mdx
@@ -62,6 +62,6 @@ Script validation failure or success does affect how a transaction is processed.
 ### Further reading:
 
 - [About the collateral mechanism](https://docs.cardano.org/plutus/collateral-mechanism)
-- [Cost model parameters for Plutus scripts](https://plutus.readthedocs.io/en/latest/reference/cost-model-parameters.html)
+- [Cost model parameters for Plutus scripts](https://plutus-apps.readthedocs.io/en/latest/reference/cost-model-parameters.html)
 - [No surprises transaction validation on Cardano: Part 1](https://iohk.io/en/blog/posts/2021/09/06/no-surprises-transaction-validation-on-cardano/)
 - [No surprises transaction validation: Part 2 (about two phases of validation and collateral](https://iohk.io/en/blog/posts/2021/09/07/no-surprises-transaction-validation-part-2/)
