--- a/content/05-explore-cardano/04-cardano-entropy.mdx
+++ b/content/05-explore-cardano/04-cardano-entropy.mdx
@@ -33,7 +33,7 @@ In Cardano, the entropy addition mechanism works as follows: the system adds spe
 
 The epoch beginning on **Monday, April 5 at 21:44:51 UTC (epoch 258)** invoked the mechanism: in particular, the previous block hash appearing in the first block on or after **Wednesday, April 7 at 15:44:51 UTC (slot 151200 of epoch 258)** will determine the transition nonce; this will take place roughly 42 hours after the epoch has begun and thus leave six hours for the genesis delegates to cast their votes. Recalling the hash chain structure of the Ouroboros blockchain, this hash value depends on the entire blockchain up to that point.
 
-
+For more details on the value of the entropy parameter, see the [explanation of the nonce](./explain-nonce).
 
 
 
