Implement review comments from Olga

--- a/content/05-explore-cardano/09-explain-nonce.mdx
+++ b/content/05-explore-cardano/09-explain-nonce.mdx
@@ -2,9 +2,7 @@
 title: Explanation of the nonce value
 metaTitle: Explanation of the nonce value
 ---
-## Question: 
-Why does the nonce have a different hex value from what was provided in the CLI command to create the proposal?  
-
+## Issue: 
 When using the Cardano command line interface (cardano-CLI), a user supplies a nonce for a transaction, but when they view the contents of the transaction, the nonce returned is different.  
 ## Steps to reproduce: 
 The cardano-cli governance create-update-proposal command creates an update proposal.  
