Add details about the Alonzo testnet setup

--- a/content/10-plutus/13-Plutus-FAQs.mdx
+++ b/content/10-plutus/13-Plutus-FAQs.mdx
@@ -21,7 +21,12 @@ Here are some useful links:
 - [Learn about Plutus section](https://docs.cardano.org/plutus/learn-about-plutus)
 - [Tutorials](https://plutus-apps.readthedocs.io/en/latest/plutus/tutorials/index.html)
 - [Explainers](https://plutus-apps.readthedocs.io/en/latest/plutus/explanations/index.html)
-	  
+
+**Q: How do I set up an Alonzo testnet?**
+
+**A:**
+You can set up an Alonzo testnet to test the submission of transactions containing (simple) Plutus scripts. For this, you will need to start an Alonzo cluster either in Byron and then gradually transition to Alonzo, or jumpstart straight into the selected era. For more details, see [the instructions and a Plutus sample script here](https://github.com/input-output-hk/cardano-node/blob/master/scripts/README.md#scripts-overview).
+
 **Q: What are the cost model parameters for Plutus?**  
 **A:**
 There are various [cost model parameters](https://plutus-apps.readthedocs.io/en/latest/reference/cost-model-parameters.html) for Plutus scripts, all of which can be adjusted individually.
