--- a/content/10-plutus/12-sc-best-practices.mdx
+++ b/content/10-plutus/12-sc-best-practices.mdx
@@ -18,7 +18,7 @@ Choose a clear and meaningful name for your smart contract. Keep it short and si
 The benefits of code review are well known; reviewed code leads to consistency across the project, defect-free, and code optimized for performance. The knowledge of the code is shared among developers, reducing maintenance time and cost in the future. For smart contracts, correctness is absolutely crucial.
  
 **Testing on a testnet**  
-You should always test your smart contracts on a testnet environment before running them on the mainnet. Write as many test scenarios as you can and run several iterations of your tests. 
+You should always test your smart contracts on a testnet environment before running them on the mainnet. Write as many test scenarios as you can and run several iterations of your tests. To set up an Alonzo testnet [see script examples here](https://github.com/input-output-hk/cardano-node/blob/master/scripts/README.md#scripts-overview).
  
 **Documenting test cases**  
 Keep a list of the test cases that you run so that you have them for reference and verification purposes.
