--- a/content/03-new-to-cardano/03-why-use-cardano.mdx
+++ b/content/03-new-to-cardano/03-why-use-cardano.mdx
@@ -91,7 +91,7 @@ To address these needs, Cardano focuses on such core concepts as:
   [hard-fork combinator technology](https://iohk.io/en/blog/posts/2020/05/07/combinator-makes-easy-work-of-shelley-hard-fork/)
   ensures a smooth transition to a new protocol while saving the history of the
   previous blocks and not causing any disruptions for end users.
-- **Decentralization** — Cardano is maintained by over 2,900 distributed stake
+- **Decentralization** — Cardano is maintained by almost 3,000 distributed stake
   pools operated by the community. All blocks and transactions are validated by
   network participants without any reliance on a centralized authority.
 - **Functional environment for business use cases** — Cardano is establishing a
