edits as per Fernando's feedback

--- a/content/10-plutus/13-Plutus-FAQs.mdx
+++ b/content/10-plutus/13-Plutus-FAQs.mdx
@@ -25,7 +25,7 @@ Here are some useful links:
 **Q: How do I set up an Alonzo testnet?**
 
 **A:**
-You can set up an Alonzo testnet to test the submission of transactions containing (simple) Plutus scripts. For this, you will need to start an Alonzo cluster either in Byron and then gradually transition to Alonzo, or jumpstart straight into the selected era. For more details, see [the instructions and a Plutus sample script here](https://github.com/input-output-hk/cardano-node/blob/master/scripts/README.md#scripts-overview).
+You can set up an Alonzo testnet to test the submission of transactions containing (simple) Plutus scripts. For this, you will need to start an Alonzo cluster either in Byron and then gradually transition to Alonzo, or straight in the selected era. For more details, see [the instructions and a Plutus sample script here](https://github.com/input-output-hk/cardano-node/blob/master/scripts/README.md#scripts-overview).
 
 **Q: What are the cost model parameters for Plutus?**  
 **A:**
