Data to BuiltinData

--- a/content/10-plutus/06-Plutus-transactions.mdx
+++ b/content/10-plutus/06-Plutus-transactions.mdx
@@ -375,7 +375,7 @@ We use the **plutus-alwayssucceeds** Plutus validator script that we compiled ea
 
 ```
 {-# INLINABLE mkValidator #-}
-mkValidator :: Data -> Data -> Data -> ()
+mkValidator :: BuiltinData -> BuiltinData -> BuiltineData -> ()
 mkValidator _ _ _ = ()
 ```
 
