--- a/content/11-community/04-community-content.mdx
+++ b/content/11-community/04-community-content.mdx
@@ -12,7 +12,7 @@ we cannot verify that their content is fully accurate or completely up-to-date.
 * [Guild Operators guides](https://cardano-community.github.io/guild-operators)
 * [big pey's stake pool video tutorials](https://www.youtube.com/playlist?list=PLyThQPJpttTJ4r9wUdlWi1DMty4nAT85d)
 * [creating a private testnet using Docker](https://github.com/ItFlyingStart/shelley-private-testnet)
-* [useful setup scripts](https://github.com/gitmachtl/scripts/tree/master/cardano)
+* [StakePoolOperator Scripts](https://github.com/gitmachtl/scripts)
 * [video guide: How to create a Cardano stake pool](https://www.youtube.com/playlist?list=PLyThQPJpttTJ4r9wUdlWi1DMty4nAT85d)
 * [building a Cardano stake pool using CNTools](https://www.youtube.com/watch?v=UN4rSRr7LDk&feature=youtu.be)
 * [Plutus Pioneers Program notes](https://plutus-pioneer-program.readthedocs.io/en/latest/plutus_pioneer_program.html)
