--- a/content/03-new-to-cardano/05-cardano-nodes.mdx
+++ b/content/03-new-to-cardano/05-cardano-nodes.mdx
@@ -55,7 +55,7 @@ a slot leader to produce a new block that is accepted into the blockchain. This
 is the basic concept of proof of stake (PoS). To maintain a level playing field, 
 Cardano includes an algorithmic saturation check that prevents any one pool from
 receiving a disproportionately large share of stake rewards simply because it
-controls the most ADA.
+controls the most ada.
 
 **Transaction validation**
 
