--- a/content/03-new-to-cardano/06-cardano-tracking-tools.mdx
+++ b/content/03-new-to-cardano/06-cardano-tracking-tools.mdx
@@ -44,6 +44,7 @@ Here is a list of other explorers to consider:
 - [Adatools](https://adatools.io/transactions)
 - [Cardanoscan](https://cardanoscan.io/transactions)
 - [AdaStat](https://adastat.net/transactions)
+- [Adapools](https://adapools.org/)
 
 ### Exploring assets
 
@@ -55,12 +56,14 @@ assets and tokens, you can use these tools:
 - [Adatools (tokens)](https://adatools.io/tokens)
 - [Cardanoscan (tokens)](https://cardanoscan.io/tokens)
 - [Pool.pm (tokens)](https://pool.pm/tokens)
+- [Adapools (tokens)](https://adapools.org/token)
 
 ### Exploring stake pools
 
 To find a list of all registered stake pools, their tickers, pool names, and
 IDs, you can use these tools:
 
+- [Adapools](https://adapools.org/)
 - [Cardano PoolTool](https://pooltool.io/)
 - [ADAtainment](https://www.adatainment.com/index.php?page=home&lang=en)
 - [POOLSTATS](https://poolstats.org/#)
