updates to tracking tools

--- a/content/03-new-to-cardano/06-cardano-tracking-tools.mdx
+++ b/content/03-new-to-cardano/06-cardano-tracking-tools.mdx
@@ -41,18 +41,20 @@ IDs in the search field.
 Here is a list of other explorers to consider:
 
 - [AdaEx](https://adaex.org/)
+- [Adapools](https://adapools.org/)
+- [AdaStat](https://adastat.net/transactions)
 - [Adatools](https://adatools.io/transactions)
 - [Cardanoscan](https://cardanoscan.io/transactions)
-- [AdaStat](https://adastat.net/transactions)
 
 ### Exploring assets
 
 Cardano supports multi-asset creation and management. To see a list of created
 assets and tokens, you can use these tools:
 
-- [Cardano Assets](https://cardanoassets.com/)
+- [Adapools](https://adapools.org/)
 - [AdaStat (tokens)](https://adastat.net/tokens)
 - [Adatools (tokens)](https://adatools.io/tokens)
+- [Cardano Assets](https://cardanoassets.com/)
 - [Cardanoscan (tokens)](https://cardanoscan.io/tokens)
 - [Pool.pm (tokens)](https://pool.pm/tokens)
 
@@ -61,11 +63,12 @@ assets and tokens, you can use these tools:
 To find a list of all registered stake pools, their tickers, pool names, and
 IDs, you can use these tools:
 
-- [Cardano PoolTool](https://pooltool.io/)
+- [Adapools](https://adapools.org/)
 - [ADAtainment](https://www.adatainment.com/index.php?page=home&lang=en)
-- [POOLSTATS](https://poolstats.org/#)
 - [Adatools (pools)](https://adatools.io/pools)
+- [Cardano PoolTool](https://pooltool.io/)
 - [Cardanoscan (pools)](https://cardanoscan.io/pools)
 - [Pool.pm (pools)](https://pool.pm/search)
+- [POOLSTATS](https://poolstats.org/#)
    
 > Note: IOHK has developed a stake pool metadata aggregation server [(SMASH)](/getting-started/operating-a-stake-pool/SMASH) to provide the community with a list of verified stake pools with valid metadata. Smash is integrated with the Daedalus wallet, and users can see a list of valid stake pools in the delegation center tab.
