Fix links to CDDL, and link to Alonzo CDDL

--- a/content/06-cardano-components/10-cardano-serialization-lib.mdx
+++ b/content/06-cardano-components/10-cardano-serialization-lib.mdx
@@ -28,9 +28,10 @@ If you are looking for legacy bindings, you can find them at:
 
 You can find original [CDDL](https://cbor.io/tools.html) specifications at:
 
-+ Byron: [link](https://github.com/input-output-hk/cardano-ledger-specs/tree/master/byron/cddl-spec)
-+ Shelley: [link](https://github.com/input-output-hk/cardano-ledger-specs/tree/master/shelley/chain-and-ledger/shelley-spec-ledger-test/cddl-files)
-+ Mary: [link](https://github.com/input-output-hk/cardano-ledger-specs/tree/master/shelley-ma/shelley-ma-test/cddl-files)
++ Byron: [link](https://github.com/input-output-hk/cardano-ledger-specs/tree/master/eras/byron/cddl-spec)
++ Shelley: [link](https://github.com/input-output-hk/cardano-ledger-specs/tree/master/eras/shelley/chain-and-ledger/shelley-spec-ledger-test/cddl-files)
++ Mary: [link](https://github.com/input-output-hk/cardano-ledger-specs/tree/master/eras/shelley-ma/shelley-ma-test/cddl-files)
++ Alonzo: [link](https://github.com/input-output-hk/cardano-ledger/tree/master/eras/alonzo/test-suite/cddl-files)
 
 ## Instructions
 
