--- a/content/06-cardano-components/10-cardano-serialization-lib.mdx
+++ b/content/06-cardano-components/10-cardano-serialization-lib.mdx
@@ -29,8 +29,8 @@ If you are looking for legacy bindings, you can find them at:
 You can find original [CDDL](https://cbor.io/tools.html) specifications at:
 
 + Byron: [link](https://github.com/input-output-hk/cardano-ledger-specs/tree/master/eras/byron/cddl-spec)
-+ Shelley: [link](https://github.com/input-output-hk/cardano-ledger-specs/tree/master/eras/shelley/chain-and-ledger/shelley-spec-ledger-test/cddl-files)
-+ Mary: [link](https://github.com/input-output-hk/cardano-ledger-specs/tree/master/eras/shelley-ma/shelley-ma-test/cddl-files)
++ Shelley: [link](https://github.com/input-output-hk/cardano-ledger/blob/master/eras/shelley/test-suite/cddl-files/shelley.cddl)
++ Mary: [link](https://github.com/input-output-hk/cardano-ledger/blob/master/eras/shelley-ma/test-suite/cddl-files/shelley-ma.cddl)
 + Alonzo: [link](https://github.com/input-output-hk/cardano-ledger/tree/master/eras/alonzo/test-suite/cddl-files)
 
 ## Instructions
