--- a/content/03-new-to-cardano/08-types-of-wallets.mdx
+++ b/content/03-new-to-cardano/08-types-of-wallets.mdx
@@ -168,3 +168,4 @@ Some of the possible options are:
 - [Atomic Wallet](https://atomicwallet.io/)
 - [Guarda](https://guarda.com/)
 - [Tangem](https://tangem.com/)
+- [SimpleHold Wallet](https://simplehold.io/)
