--- a/content/10-plutus/06-Plutus-PG-setup.mdx
+++ b/content/10-plutus/06-Plutus-PG-setup.mdx
@@ -1,4 +1,7 @@
-# Setting up the Plutus Playground
+---
+title: Setting up the Plutus Playground
+metaTitle: Setting up the Plutus Playground
+---
 
 This tutorial helps you to setup the Plutus Playground and matches the playground version that is used in the third iteration of the Plutus Pioneer Program.
 
