--- a/content/11-community/03-ambassador-program.mdx
+++ b/content/11-community/03-ambassador-program.mdx
@@ -10,4 +10,4 @@ The program aims to:
 - Promote awareness
 - Educate the wider community 
  
-If you would like to join this program, please send us an [email](mailto:community@cardanofoundation.org).
+If you would like to join this program, please visit [Cardano Ambassador Program](https://www.cardano.org/ambassadors/).
