Typo in 04-delegation.mdx
Typo wiil -> will

--- a/content/04-core-concepts/04-delegation.mdx
+++ b/content/04-core-concepts/04-delegation.mdx
@@ -49,7 +49,7 @@ The funds belonging to one staking key of a user’s wallet requires posting a
 single transaction, containing a delegation certificate. This will only incur
 the usual transaction fees. In particular, a stakeholder needs to pay a deposit
 for registering a stake address and not for the stake delegation itself. Once a
-stake address is registered, the stakeholder wiil only pay fees to set the
+stake address is registered, the stakeholder will only pay fees to set the
 delegation choice.
 
 Note that the stakeholder's stake will count for the pool's stake during the
