spelling correction in 09-cardano-addresses.md
line 17

--- a/content/04-core-concepts/09-cardano-addresses.mdx
+++ b/content/04-core-concepts/09-cardano-addresses.mdx
@@ -14,7 +14,7 @@ Shelley introduces four different types of addresses:
 
 Besides those new addresses, Shelley continues to support Byron-era *bootstrap addresses* and *script addresses*, but only the new base and
 pointer addresses carry stake rights. Therefore, addresses consist of some serialized data specified in the ledger specification stored in the
-blockhain’s blocks, e.g., an Unspent Transaction Output (UTXO) address. 
+blockchain’s blocks, e.g., an Unspent Transaction Output (UTXO) address. 
 
 The serialized data (address) contains two parts:
 
